Fix: The .net testprojects share now the same code to print/process the args passed to the program Fix: the .netcore projects use .netcore2.0 for vs2017 compatibility Feature: the testprojects contain *.template files that store the default visual studio cmdlineargs

--- a/TestProjects/VB_DotNetCore/VB_DotNetCore.vbproj
+++ b/TestProjects/VB_DotNetCore/VB_DotNetCore.vbproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <RootNamespace>VB_DotNetCore</RootNamespace>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmartArgsTester\SmartArgsTester.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
 
 </Project>
