--- a/TestProjects/CS_DotNetCore/CS_DotNetCore.csproj
+++ b/TestProjects/CS_DotNetCore/CS_DotNetCore.csproj
@@ -2,7 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="SmartArgsTester.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmartArgsTester\SmartArgsTester.csproj" />
+  </ItemGroup>
 
 </Project>
