--- a/TestProjects/FS_DotNetCore/FS_DotNetCore.fsproj
+++ b/TestProjects/FS_DotNetCore/FS_DotNetCore.fsproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmartArgsTester\SmartArgsTester.csproj" />
   </ItemGroup>
 
 </Project>
